SONARGO-114 Rewrite tests RedundantParenthesesCheckTest - TooLongFunctionCheckTest (#83)